cert align Fixed

--- a/src/pages/about/AboutCert.scss
+++ b/src/pages/about/AboutCert.scss
@@ -165,6 +165,10 @@
 
   p {
     margin-left: 5px;
+    
+    @media (max-width : 500px) {
+      text-align: left;
+    }
   }
 }
 
