--- a/src/pages/about/IntroAbout.scss
+++ b/src/pages/about/IntroAbout.scss
@@ -91,4 +91,8 @@
   @media (max-width: 650px) {
     font-size: 3vw;
   }
+
+  @media (max-width : 500px) {
+    font-size: 4.5vw;
+  }
 }
